golem-schema-derive/tests/compile_fail/discriminator_on_non_union_from_schema.stderr
error: discriminator attributes (`prefix`, `suffix`, `contains`, `regex`, `field_equals`, `field_absent`) require `#[schema(union)]` on the enum
  --> tests/compile_fail/discriminator_on_non_union_from_schema.rs:23:5
   |
23 |     A(String),
   |     ^
